--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Games#show</h1>
-<p>Find me in app/views/games/show.html.erb</p>
+<h1>Games Page</h1>
+<% @game.update_time %>
+<p>Welcome <%= @game.user.name%></p>
+
+
+<!--<p><%= @game.user.name%></p>-->
+<p><%= "#{@game.seconds_passed} secounds passed" %></p>
+
+<h1>Stocks</h1>
+<% @game.stocks.each do |stock|%>
+    <p><%= "#{stock.resource_name}: #{stock.amount}" %></p>
+<% end %>
+
+<h1>Producers</h1>
+<% @game.producers.each do |producer|%>
+    <p><%= "Producing : #{(producer.amount)*(producer.base_rate)} per second" %></p>
+<% end %>
+
+
+
+<!--<p><%= @game.user.name%></p>-->
+<!--<p><%= @game.user.name%></p>-->
