--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,7 +3,6 @@
 <p>Welcome <%= @game.user.name%></p>
 
 
-<!--<p><%= @game.user.name%></p>-->
 <p><%= "#{@game.seconds_passed} secounds passed" %></p>
 
 <h1>Stocks</h1>
@@ -13,10 +12,12 @@
 
 <h1>Producers</h1>
 <% @game.producers.each do |producer|%>
-    <p><%= "Producing : #{(producer.amount)*(producer.base_rate)} per second" %></p>
+    <p><%= "#{(producer.name)} : #{(producer.amount)}" %></p>
+    <p><%= "Producing : #{(producer.amount)*(producer.base_rate)} per second " %></p>
+    <% if producer.valid_purchase%>
+        <%= link_to "Buy 1", "/producers/#{producer.id}/buy/#{1}" %>
+    <% end %>
+    </p>
 <% end %>
 
 
-
-<!--<p><%= @game.user.name%></p>-->
-<!--<p><%= @game.user.name%></p>-->
