find or create users at /login, create default games for new users

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,7 +4,7 @@
 
 
 <!--<p><%= @game.user.name%></p>-->
-<p><%= "#{@game.seconds_passed} secounds passed" %></p>
+<p><%= "#{@game.seconds_passed} seconds passed" %></p>
 
 <h1>Stocks</h1>
 <% @game.stocks.each do |stock|%>
