--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+	background: #A1BECC
+}
+div {
+	background: #3E6B7F;
+	width: 45%;
+	vertical-align: center;
+	text-align: center;
+	margin: auto;
+}
+h1{
+	padding-bottom: 15%;
+}
+
+
