--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,13 +7,20 @@ body {
 }
 div {
 	background: #3E6B7F;
+
 	width: 45%;
-	vertical-align: center;
+	height: 27%;
+
 	text-align: center;
 	margin: auto;
+	margin-top: 10%
 }
 h1{
-	padding-bottom: 15%;
+	padding-top: 15%;
+}
+
+#user_name {
+	margin-bottom: 15%;
 }
 
 
