--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import 'assets/vars';
+
+div.producer {
+	background: $first-item;
+}
+
+.column {
+	width: 31%;
+	float: left;
+}
